// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PlantCard sollte korrekt gerendert werden (Snapshot Test) 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#F5F5F5",
      "borderRadius": 20,
      "height": 280,
      "marginRight": 15,
      "opacity": 1,
      "overflow": "hidden",
      "width": 200,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://example.com/plant.jpg",
      }
    }
    style={
      {
        "height": "100%",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "bottom": 0,
        "left": 0,
        "padding": 15,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 22,
          "fontWeight": "bold",
        }
      }
    >
      Monstera Deliciosa
    </Text>
  </View>
</View>
`;

exports[`PlantCard sollte mit heutiger Aufgabe korrekt gerendert werden 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#F5F5F5",
      "borderColor": "#FFC107",
      "borderRadius": 20,
      "borderWidth": 4,
      "elevation": 8,
      "height": 280,
      "marginRight": 15,
      "opacity": 1,
      "overflow": "hidden",
      "shadowColor": "#FFC107",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 8,
      "width": 200,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#E8F5E9",
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "fontSize": 80,
        }
      }
    >
      🌿
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "bottom": 0,
        "left": 0,
        "padding": 15,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 22,
          "fontWeight": "bold",
        }
      }
    >
      Kaktus
    </Text>
  </View>
</View>
`;

exports[`PlantCard sollte mit überfälliger Aufgabe korrekt gerendert werden 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#F5F5F5",
      "borderColor": "#F44336",
      "borderRadius": 20,
      "borderWidth": 4,
      "elevation": 8,
      "height": 280,
      "marginRight": 15,
      "opacity": 1,
      "overflow": "hidden",
      "shadowColor": "#F44336",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 8,
      "width": 200,
    }
  }
>
  <Image
    source={
      {
        "uri": "https://example.com/plant.jpg",
      }
    }
    style={
      {
        "height": "100%",
        "resizeMode": "cover",
        "width": "100%",
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "rgba(0, 0, 0, 0.5)",
        "bottom": 0,
        "left": 0,
        "padding": 15,
        "position": "absolute",
        "right": 0,
      }
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 22,
          "fontWeight": "bold",
        }
      }
    >
      Aloe Vera
    </Text>
  </View>
</View>
`;
